[tool.poetry]
name = "headlamphealth"
version = "0.1.0"
description = ""
authors = ["abhinavkashyap <abhinav@comp.nus.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
rich = "^13.7.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
